<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_lsb"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lsb_method"/>

        <item
            android:id="@+id/nav_lsb_perm"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lsb_perm_method"/>

        <item
            android:id="@+id/nav_lsb_interval"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/lsb_interval_method"/>

        <item
            android:id="@+id/nav_koxa_jao"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/koxa_jao_method"/>

        <item
            android:id="@+id/nav_quant"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/quantization_method"/>

    </group>

</menu>
